--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -94,8 +94,22 @@
     -webkit-appearance: none;
   }
 }
+/* w-full h-16 p-2 flex flex-col gap-1 rounded-lg items-center justify-center bg-secondary */
+
+.group-option-icons{
+  width: 100%;
+  height: 4rem;
+  padding: 0.5rem;
+  flex-direction: column;
+  gap: 0.25rem; 
+  display: flex;
+  align-items: center; 
+  justify-content: center;  
+  border-radius: var(--radius);
+  background-color: hsl(var(--secondary));
 
 
+}
 
 
 /* 0, 84.2%, 60.2%, 0.28 */
